// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Keyword detection detects a single heavy keyword as spam 1`] = `
{
  "action": "ban",
  "averageSimilarity": 128,
  "comparisons": [
    {
      "comparedContent": {
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "KEYWORD content content",
        "hexHash": "0bd230d06e3c4cc602021c8403180c00271a1e55a90210aac421bea8c7918e24",
        "messageId": "000000000000000000000",
      },
      "originalContent": {
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "KEYWORD content content",
        "hexHash": "0bd230d06e3c4cc602021c8403180c00271a1e55a90210aac421bea8c7918e24",
        "messageId": "000000000000000000000",
      },
      "pointsFromMatches": {
        "highestRankingMatch": 5,
        "highestRankingString": "keyword",
        "matches": [
          "keyword",
        ],
      },
      "similarityToPostedContent": 128,
    },
  ],
}
`;

exports[`Keyword detection detects several light weight keywords as spam 1`] = `
{
  "action": "ban",
  "averageSimilarity": 128,
  "comparisons": [
    {
      "comparedContent": {
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "LIGHTWORD content content",
        "hexHash": "8bd230d06cbf4cc712821ce40b9a0850271a0a51a10219aae429aee0c7918421",
        "messageId": "000000000000000000000",
      },
      "originalContent": {
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "LIGHTWORD content content",
        "hexHash": "8bd230d06cbf4cc712821ce40b9a0850271a0a51a10219aae429aee0c7918421",
        "messageId": "000000000000000000000",
      },
      "pointsFromMatches": {
        "highestRankingMatch": 1,
        "highestRankingString": "lightword",
        "matches": [
          "lightword",
        ],
      },
      "similarityToPostedContent": 128,
    },
    {
      "comparedContent": {
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "LIGHTWORD content content",
        "hexHash": "8bd230d06cbf4cc712821ce40b9a0850271a0a51a10219aae429aee0c7918421",
        "messageId": "000000000000000000000",
      },
      "originalContent": {
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "LIGHTWORD content content",
        "hexHash": "8bd230d06cbf4cc712821ce40b9a0850271a0a51a10219aae429aee0c7918421",
        "messageId": "000000000000000000000",
      },
      "pointsFromMatches": {
        "highestRankingMatch": 1,
        "highestRankingString": "lightword",
        "matches": [
          "lightword",
        ],
      },
      "similarityToPostedContent": 128,
    },
    {
      "comparedContent": {
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "LIGHTWORD content content",
        "hexHash": "8bd230d06cbf4cc712821ce40b9a0850271a0a51a10219aae429aee0c7918421",
        "messageId": "000000000000000000000",
      },
      "originalContent": {
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "LIGHTWORD content content",
        "hexHash": "8bd230d06cbf4cc712821ce40b9a0850271a0a51a10219aae429aee0c7918421",
        "messageId": "000000000000000000000",
      },
      "pointsFromMatches": {
        "highestRankingMatch": 1,
        "highestRankingString": "lightword",
        "matches": [
          "lightword",
        ],
      },
      "similarityToPostedContent": 128,
    },
    {
      "comparedContent": {
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "LIGHTWORD content content",
        "hexHash": "8bd230d06cbf4cc712821ce40b9a0850271a0a51a10219aae429aee0c7918421",
        "messageId": "000000000000000000000",
      },
      "originalContent": {
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "LIGHTWORD content content",
        "hexHash": "8bd230d06cbf4cc712821ce40b9a0850271a0a51a10219aae429aee0c7918421",
        "messageId": "000000000000000000000",
      },
      "pointsFromMatches": {
        "highestRankingMatch": 1,
        "highestRankingString": "lightword",
        "matches": [
          "lightword",
        ],
      },
      "similarityToPostedContent": 128,
    },
    {
      "comparedContent": {
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "LIGHTWORD content content",
        "hexHash": "8bd230d06cbf4cc712821ce40b9a0850271a0a51a10219aae429aee0c7918421",
        "messageId": "000000000000000000000",
      },
      "originalContent": {
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "LIGHTWORD content content",
        "hexHash": "8bd230d06cbf4cc712821ce40b9a0850271a0a51a10219aae429aee0c7918421",
        "messageId": "000000000000000000000",
      },
      "pointsFromMatches": {
        "highestRankingMatch": 1,
        "highestRankingString": "lightword",
        "matches": [
          "lightword",
        ],
      },
      "similarityToPostedContent": 128,
    },
  ],
}
`;
